--- a/Portifolio-Project/src/components/About/About.css
+++ b/Portifolio-Project/src/components/About/About.css
@@ -71,6 +71,8 @@
 .about-left img{
     width: 240px;
     height: 240px;
+    border-radius: 5px;
+    clip-path: inset(0px 0px 20px 0px);
 }
 .about-achievements{
     display: flex;
@@ -104,4 +106,54 @@
 .about-achievement:hover{
     transform: scale(1.12);
     transition: 0.4s;
+}
+@media(max-width:800px){
+    .about{
+        gap: 80px;
+        margin: 50px 70px;
+        align-items: start;
+    }
+    .about-title h1{
+        font-size: 50px;
+        padding: 0;
+    }
+    .about-title img{
+        width: 80px;
+        height: 80px;
+        right: -50px;
+    }
+    .about-sections{
+        flex-direction: column;
+    }
+    .about-left{
+        display: none;
+    }
+    .about-para{
+        font-size: 18px;
+        line-height: 32px;
+    }
+    .about-skill{
+        gap: 20px;
+        align-items: center;
+    }
+    .about-skill p{
+        font-size: 20px;
+    }
+    .about-skill hr{
+        height: 6px;
+    }
+    .about-achievements{
+        justify-content: space-between;
+    }
+    .about-achievement{
+        gap: 10px;
+    }
+    .about-achievement h1{
+        font-size: 30px;
+        font-weight: 700;
+    }
+    .about-achievement p{
+        text-align: center;
+        font-size: 16px;
+    }
 }
