--- a/Portifolio-Project/src/components/Contact/Contact.css
+++ b/Portifolio-Project/src/components/Contact/Contact.css
@@ -113,3 +113,52 @@
     transform: scale(1.05);
     transition: 0.3s;
 }
+@media(max-width:800px){
+    .contact{
+        gap: 50px;
+        margin: 50px 70px;
+        align-items: start;
+
+    }
+    .contact-title h1{
+        padding: 0;
+        font-size: 50px;
+        font-weight: 600;
+    }
+    .contact-title img{
+        width: 130px;
+        margin-right: -80px;
+        margin-bottom: 10px;
+    }
+    .contact-section{
+        gap: 100px;
+        flex-direction: column;
+    }
+    .contact-left h1{
+        font-size: 40px;
+    }
+    .contact-left p{
+        font-size: 18px;
+        }
+    .contact-detail{
+        gap: 20px;
+    }
+    .contact-detail img{
+        width: 25px;
+    }
+    .contact-right label{
+        font-size: 20px;
+    }
+    .contact-right input{
+        width: 100%;
+        font-size: 16px;
+    }
+    .contact-right textarea{
+        width: 95%;
+        font-size: 16px;
+    }
+    .contact-submit{
+        font-size: 16px;
+        padding: 15px 40px;
+    }
+}
