--- a/Portifolio-Project/src/components/Hero/Hero.css
+++ b/Portifolio-Project/src/components/Hero/Hero.css
@@ -57,3 +57,39 @@
 .hero-resume:hover{
     border-color: #9e2323;
 }
+
+@media(max-width: 800px){
+    .hero img{
+        margin-top: 120px;
+        width: 200px;
+        height: 200px;
+    }
+    .hero h1{
+        margin-top: 50px;
+        width: 90%;
+        font-size: 42px;
+    }
+    .hero p{
+        width: 60%;
+        font-size: 18px;
+        line-height: 32px;
+        margin: 10px 0px;
+
+    }
+    .hero-action{
+        font-size: 18px;
+        font-weight: 500;
+        margin-bottom:50px;
+        gap: 16px;
+    }
+    .hero-connect{
+        padding: 20px 30px;
+        border-radius: 40px;
+    }
+    .hero-resume{
+        padding: 20px 40px;
+        border-radius: 40px;
+    }
+
+
+}
