--- a/Portifolio-Project/src/components/MyWork/MyWork.css
+++ b/Portifolio-Project/src/components/MyWork/MyWork.css
@@ -35,6 +35,7 @@
     transition: 0.3s;
     cursor: pointer;
     border-radius: 10px;
+    object-fit: cover;
 }
 .mywork-container img:hover{
     transform: scale(1.10);
@@ -62,4 +63,41 @@
 .mywork-showmore:hover{
     gap: 15px;
     transition: 0.4s;
+}
+@media(max-width:800px){
+    .mywork{
+        gap: 50px;
+        margin: 50px 70px;
+        align-items: start;
+
+    }
+    .mywork-title h1{
+        padding: 0;
+        font-size: 50px;
+        font-weight: 600;
+    }
+    .mywork-title img{
+        width: 60px;
+        height: 60px;
+        margin-right: -50px;
+        margin-bottom: 10px;
+    }
+    .mywork-container{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 20px;
+    
+    }
+    .mywork-container img{
+        width: 100%;
+        height: 100%;
+        object-fit:cover;
+
+    }
+    .mywork-showmore{
+        padding: 20px 40px;
+        font-size: 18px;
+        margin: 50px auto;
+        cursor: pointer;
+    }
 }
