--- a/Portifolio-Project/src/components/Navbar/Navbar.css
+++ b/Portifolio-Project/src/components/Navbar/Navbar.css
@@ -41,3 +41,56 @@
    text-decoration: none; 
    color: whitesmoke;
 }
+.nav-mob-close{
+    display: none;
+}
+.nav-mob-open{
+    display: none;
+
+}
+@media(max-width:800px){
+    .navbar{
+        margin: 20px 50px;
+    }
+    .nav-connect{
+        display: none;
+    }
+    .nav-mob-open{
+        display: block;
+        position: fixed;
+        right: 30px;
+        filter: grayscale(70);
+    }
+    .nav-mob-close{
+        display: block;
+        position: relative ;
+        top: 30px;
+        left: 290px;
+        width: 30px;
+        filter: invert(4);
+    }
+    .nav-menu{
+        position: fixed;
+        flex-direction: column;
+        align-items: start;
+        top: 0;
+        gap: 30px;
+        background: #1F0016;
+        width: 350px;
+        height: 100vh;
+        z-index: 2;
+        transition: right 0.2s;
+        right: -350px;
+        border-radius: 50px 0;
+    
+    }
+    .nav-menu li{
+        font-size: 30px;
+        padding-left: 100px;
+        flex-direction: row;
+        gap: 20px;
+    }
+    .nav-menu li img{
+        display: none;
+    }
+}
