--- a/Portifolio-Project/src/components/Services/Services.css
+++ b/Portifolio-Project/src/components/Services/Services.css
@@ -77,3 +77,38 @@
     transform: scale(1.05);
     transition: 0.3s;
 }
+@media(max-width:800px){
+    .services{
+        align-items: start;
+        gap: 70px;
+        margin: 20px 70px;
+    }
+    .services-title h1{
+        padding: 0;
+        font-size: 40px;
+    }
+    .services-title img{
+        width: 80px;
+        height: 80px;
+        margin-right:-50px;
+    }
+    .services-format{
+        gap: 20px;
+        padding: 32px;
+    }
+    .services-format h2{
+        font-size: 28px;
+    }
+    .services-format p{
+        font-size: 18px;
+        line-height: 32px;
+        max-width: 300px;
+    }
+    .services-readmore img{
+        width: 20px;
+    }
+    .services-container{
+        grid-template-columns: 1fr 1fr;
+        gap: 20px;
+    }
+}
