--- a/Portifolio-Project/src/components/Contact/Contact.css
+++ b/Portifolio-Project/src/components/Contact/Contact.css
@@ -24,6 +24,8 @@
     height: 50px;
     bottom: 0;
     right: 0;
+    left: 350px;
+    margin-bottom: 10px;
     z-index: -1;
 }
 .contact-section{
